--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.3",
+    "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
