--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "eslint-plugin-react": "^7.18.3",
     "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.13.1",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
