--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.13.1",
+    "owl.carousel": "^2.3.4",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
