--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "webpack --mode production",
     "dev": "webpack --mode development",
     "format": "prettier \"src/**/*.{js,html}\" --write",
-    "lint": "eslint \"src/**/*.{js,jsx}\" --quiet"
+    "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
+    "sass": "sass"
   },
   "repository": {
     "type": "git",
@@ -38,10 +39,10 @@
     "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.13.1",
-    "owl.carousel": "^2.3.4",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.6",
