--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,10 +10,12 @@
 
   "rules": {
     "react/prop-types": 0,
-    "no-console": 1
+    "no-console": 1,
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
   },
 
-  "plugins": ["react", "import", "jsx-a11y"],
+  "plugins": ["react", "import", "jsx-a11y", "react-hooks"],
 
   "parserOptions": {
     "ecmaVersion": 2018,
